@@ -471,3 +471,6 @@
 	* Incremented the package version to 0.9.0.
 2021-05-03 Fred Gleason <fredg@paravelsystems.com>
 	* Added 'compile' to the 'make maintainer-clean' target.
+2021-05-03 Fred Gleason <fredg@paravelsystems.com>
+	* Cleaned up compiler warnings for glassplayer(1).
+	* Cleaned up compiler warnings for glassplayergui(1).
